# jupyterlite

./: .gitignore  .gitlab-ci.yml  README.md  build-environment.yml  micromamba.sh  mkdocs.yml  pyproject.toml  run.sh
contents/: test.ipynb
docs/: extra.css  index.md
docs/domains/: README.md
docs/domains/Bio/: data.md  explore.ipynb  generate_data.py  generate_plot.py
